# zobaczycmorze-zgloszenia

./: .env.example  README.md  RODO.md  TODO.md  key.txt  manage.py  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
rejs/: admin.py  apps.py  audit.py  forms.py  mailers.py  models.py  payu.py  payu_verify.py  signals.py  tests.py  urls.py  views.py  views_payu.py
rejs/fixtures/: sample_data.json
rejs/management/commands/: db_status.py  openpage.py  resetadmin.py  usun_dane_wrazliwe.py
rejs/migrations/: 0001_initial.py  0002_alter_rejs_options_alter_zgloszenie_options.py  0003_rejs_cena_rejs_zaliczka_zgloszenie_status_finanse_and_more.py  0004_alter_finanse_zgloszenie.py  0005_zgloszenie_wzrok_wachta.py  0006_remove_wachta_czlonkowie_zgloszenie_wachta.py  0007_alter_wplata_options_info.py  0008_alter_finanse_options_zgloszenie_token.py  0009_alter_zgloszenie_status_ogloszenie_delete_info.py  0010_remove_wplata_finanse_wplata_rodzaj_and_more.py  0011_alter_ogloszenie_options_alter_wachta_options_and_more.py  0012_alter_zgloszenie_obecnosc.py  0013_alter_zgloszenie_data_urodzenia_and_more.py  0014_alter_zgloszenie_status.py  0015_alter_dane_dodatkowe_options_and_more.py  0015_dodanie_zgody_dane_wrazliwe.py  0016_audit_log.py  0016_zgloszenie_adres_zgloszenie_kod_pocztowy_and_more.py  0017_dodanie_zgody_dane_wrazliwe.py  0017_rejs_aktywna_rekrutacja_and_more.py  0018_audit_log.py  0018_zgloszenie_unique_zgloszenie_na_rejs_dla_osoby.py  0019_alter_zgloszenie_data_urodzenia.py  0020_alter_zgloszenie_data_urodzenia.py  0021_alter_zgloszenie_adres_alter_zgloszenie_miejscowosc.py  0021_dodanie_zgody_dane_wrazliwe.py  0022_audit_log.py  0023_zgloszenie_plec_alter_zgloszenie_rola_and_more.py  0024_alter_zgloszenie_adres_alter_zgloszenie_kod_pocztowy_and_more.py  0025_platnoscpayu.py  0026_wplata_opis_wplata_rodzaj_id_alter_wplata_rodzaj.py  0027_wplata_zrodlo_id.py  0028_dane_dodatkowe_pos4_dane_dodatkowe_pos5_and_more.py  0029_alter_zgloszenie_adres_alter_zgloszenie_kod_pocztowy_and_more.py
rejs/modele/: finanse.py  zgloszenie.py
rejs/reports/: __init__.py  builder.py  excel.py
rejs/serwisy/: notyfikacje.py  rejestracja.py
rejs/templates/emails/: wachta_added.txt  zgloszenie_o.html  zgloszenie_o.txt  zgloszenie_potwierdzone.html  zgloszenie_utworzone.html  zgloszenie_utworzone.txt
rejs/templates/payu/: error.html  summary.html
rejs/templates/rejs/: __base.html  __index.html  __zgloszenie_details.html  __zgloszenie_form.html  dane_dodatkowe_form.html  payu_error.html  rodo_info.html  zgloszenie_details.html
rejs/tests/: test_admin.py  test_forms.py  test_mailers.py  test_modele.py  test_payu_webhook.py  test_reports.py  tests.py
rejs/tests/test_serwisy/: test_rejestracja.py
themes/alt/rejs/: base.html  index.html  zgloszenie_details.html  zgloszenie_form.html
zm_zgloszenia/: settings.py  urls.py
