[project]
name = "zm-zgloszenia"
version = "0.1.0"
description = "Ship cruise registration system for visually impaired users"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2.9",
    "asgiref>=3.11.0",
    "sqlparse>=0.5.4",
    "cryptography>=44.0.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "python-dotenv",
    "ruff",
    "mypy",
    "django-stubs",
]

[tool.ruff]
target-version = "py312"
indent-width = 4
line-length = 120

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["W191"]  # Ignore "indentation contains tabs" warning since we use tabs

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "zm_zgloszenia.settings"

[tool.poe.tasks]
serve = "uv run --env-file .env python manage.py runserver"
migrate = "uv run --env-file .env python manage.py migrate"
makemigrations = "uv run --env-file .env python manage.py makemigrations"
createsuperuser = "uv run --env-file .env python manage.py createsuperuser"
test = "uv run --env-file .env python manage.py test"
shell = "uv run --env-file .env python manage.py shell"
resetadmin = "uv run --env-file .env python manage.py resetadmin"
open = "uv run --env-file .env python manage.py openpage"
openadmin = "uv run --env-file .env python manage.py openpage --admin"
openalt = { cmd = "uv run --env-file .env python manage.py openpage", env = { DJANGO_THEME = "alt" } }

# Database management
_delete-db = "python -c \"import pathlib; p=pathlib.Path('db.sqlite3'); p.unlink(missing_ok=True); print('Database deleted.' if not p.exists() else '')\""
_load-sample-data = "uv run --env-file .env python manage.py loaddata sample_data"
_db-status = "uv run --env-file .env python manage.py db_status"

# Setup commands
init = ["migrate", "_load-sample-data", "_db-status"]
reset-db = ["_delete-db", "migrate", "_load-sample-data", "_db-status"]
reset-db-clean = ["_delete-db", "migrate", "_db-status"]
